tests/sksl/errors/UniformVarWithInitializerExpression.glsl
### Compilation failed:

error: 1: 'uniform' variables cannot use initializer expressions
uniform float x = 1;
                  ^
1 error
